# Performance

LibJpegCompress/app/: CMakeLists.txt  build.gradle
LibJpegCompress/app/src/main/: AndroidManifest.xml
LibJpegCompress/app/src/main/res/layout/: activity_main.xml
LibJpegCompress/app/src/test/java/com/jing/libjpegcompress/: ExampleUnitTest.java
Performance/LibJpegCompress/app/: CMakeLists.txt
Performance/LibJpegCompress/app/src/androidTest/java/com/jing/libjpegcompress/: ExampleInstrumentedTest.java
Performance/LibJpegCompress/app/src/main/cpp/: com_jing_libjpegcompress_CompressUtils.h  compress_utils.cpp
Performance/LibJpegCompress/app/src/main/java/com/jing/libjpegcompress/: CompressUtils.java  MainActivity.java
Performance/LibJpegCompress/gradle/wrapper/: gradle-wrapper.properties
